[project]
name = "llm-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.129.0",
    "jupyter>=1.1.1",
    "qwen-vl-utils>=0.0.14",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.48.0",
    "uvicorn>=0.40.0",
]
